[FIX] Experimental fix to download new lwjgl3 snapshot versions